--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <div class="password-gate" id="password-gate">
         <div class="password-gate-content">
             <div class="password-gate-logo">
-                <img src="https://www.figma.com/api/mcp/asset/5698e4f1-7233-4f5f-9746-0d41663441a4" alt="Flipxer Icon" class="password-gate-icon">
-                <img src="https://www.figma.com/api/mcp/asset/718e15cc-a8af-4cee-aea1-f74e7fa342fe" alt="Flipxer" class="password-gate-text">
+                <div class="logo">
+                    <div class="logo-icon-wrapper">
+                        <img src="https://www.figma.com/api/mcp/asset/5698e4f1-7233-4f5f-9746-0d41663441a4" alt="Flipxer Icon" class="logo-icon">
+                    </div>
+                    <div class="logo-text-wrapper">
+                        <img src="https://www.figma.com/api/mcp/asset/718e15cc-a8af-4cee-aea1-f74e7fa342fe" alt="Flipxer" class="logo-text">
+                    </div>
+                </div>
             </div>
             <h2>Team Access Required</h2>
             <p>Enter the team password to view the roadmap</p>
@@ -41,7 +47,6 @@
                 <a href="#overview" class="nav-link active">Overview</a>
                 <a href="#timeline" class="nav-link">Timeline</a>
                 <a href="#milestones" class="nav-link">Milestones</a>
-                <a href="#considerations" class="nav-link">Considerations</a>
             </nav>
             <button class="btn-primary btn-export" id="export-pdf-btn">
                 <svg class="export-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
